# Aetios-Med

./: .gitignore  FRONTEND_IMPLEMENTATION.md  FRONTEND_SHOWCASE.md  INSTRUCTION_MANUAL.html  LICENSE  README.md  electron-builder.yml  manual_preview.md  package-lock.json  package.json
.github/workflows/: build.yml
assets/assets/icons/: icon.icns
backend/: pyproject.toml  requirements.txt  run.py  run.spec
backend/app/: __init__.py  config.py  main.py
backend/app/agent/: README.md  __init__.py  orchestrator.py  prompts.py  tools.py
backend/app/data/: uk_curriculum.json
backend/app/data/prompts/: quiz_generation.txt  study_plan.txt  tutor_system.txt
backend/app/parsers/: anki_parser.py  notes_parser.py  pdf_parser.py
backend/app/routers/: chat.py  graph.py  ingest.py  quiz.py  study.py  system.py
backend/app/services/: __init__.py  encryption_service.py  graph_service.py  ingest_service.py  llm_service.py  model_downloader.py  quiz_service.py  retention_service.py  study_plan_service.py  vector_service.py
backend/tests/: test_anki_parser.py
electron/: main.js  preload.js
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: INSTRUCTION_MANUAL.html  index.html
frontend/src/: App.tsx  electron.d.ts  index.ts
frontend/src/hooks/: useChat.ts  useGraph.ts  (+3 more)
scripts/: build-backend.js  build-mac.sh  build-production.ps1  build-production.sh  build-win.ps1  check-dependencies.js  download-model.js  install.ps1  install.sh  update-dependencies.ps1  update-dependencies.sh
(+34 files in other folders)
